--- a/src/app/shared/jsf-extention/widgets/ext-query-select/ext-query-select.component.scss
+++ b/src/app/shared/jsf-extention/widgets/ext-query-select/ext-query-select.component.scss
@@ -1,4 +1,4 @@
-::ng-deep {
+:host ::ng-deep {
     .mat-select {
         &-panel {
             .mat-select {
