--- a/src/app/xm-entity/entity-card-compact/entity-card-compact.component.scss
+++ b/src/app/xm-entity/entity-card-compact/entity-card-compact.component.scss
@@ -80,7 +80,7 @@
     }
 }
 
-::ng-deep {
+:host ::ng-deep {
     .card {
         &-menu {
             position: absolute;
